Alteração do index.html
Alteração do texto da página principal.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
     <h1>Página Inicial</h1>
-    <p>Bem-vindo à página inicial!</p>
+    <p>FIAP - 2TSCPV - Tecnolog em Data Science </p>
+    
+    <p>Loja Virtual do professor! </p>
 
     <h1>Buscar Produto</h1>
     <a href="/buscar">Buscar Produto</a>    
