atualização do buscar.html

--- a/templates/buscar.html
+++ b/templates/buscar.html
@@ -4,7 +4,7 @@
     <title>Página de Busca de Produtos</title>
 </head>
 <body>
-    <h1>Buscar Produtos</h1>
+    <h1>Busca avançada de produtos. Preencha o campo abaixo:</h1>
     <form method="post">
         <input type="text" name="termo_busca" placeholder="Digite o termo de busca">
         <button type="submit">Buscar</button>
